--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
   <meta name="viewport" content="width=device-width">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   <script src = "https://unpkg.com/axios/dist/axios.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vue@2.5.17/dist/vue.js"></script>
   <script src="./main.js"></script>
   <title>JS Bin</title>
 </head>
 <body>
 <div id="app">
  <!-- JSbin:
-  https://jsbin.com/piwixejeto/edit?js,output
+  https://jsbin.com/piwixejeto/edit?html,css,js,console,output
   -->
   
 </div>
